--- a/frontend/styles/Home.module.css
+++ b/frontend/styles/Home.module.css
@@ -12,13 +12,8 @@
   align-items: center;
 }
 
-.footer {
-  display: flex;
-  flex: 1;
-  padding: 2rem 0;
-  border-top: 1px solid #eaeaea;
-  justify-content: center;
-  align-items: center;
+.Header {
+  border-bottom: 1px solid black;
 }
 
 .footer a {
