Add login, and calendar

--- a/frontend/styles/Home.module.css
+++ b/frontend/styles/Home.module.css
@@ -23,9 +23,13 @@
   flex-grow: 1;
 }
 
-.title a {
-  color: #0070f3;
-  text-decoration: none;
+.login {
+  margin:10px auto;
+  display: flex;
+  width: 200px;
+  justify-content: center;
+  flex-direction: column;
+  text-align: center;
 }
 
 .title a:hover,
